--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     </div>
 
-    <script type="text/javascript" src="../js/Forceify.js"></script>
+    <script type="text/javascript" src="Forceify.js"></script>
 	<script type="text/javascript">
 
 	// Helpers function
