--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
 
             <h1>Forceify</h1>
-            <p>The fastest, smartest and cross-device library for JavaScript</p>
+            <p>The fastest, smartest and cross-device 3D Touch library for JavaScript</p>
 		<div class="cd-iphone-6 cd-black centerize">
   <div class="cd-body">
     <div class="cd-sound"></div>
