--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     </div>
 
-	<!--script>
+	<script>
 	// false check
 	document.body.ontouchforcechange = function () {}
 
@@ -57,7 +57,7 @@
     };
 
 	registerEvent(forceMe);
-	</script-->
+	</script>
     <script type="text/javascript" src="Forceify.js"></script>
 	<script type="text/javascript">
 
