--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 	<script type="text/javascript">
 
 	// Helpers function
+	var forceMe = document.querySelector('#forceMe');
 
 	// Lerp array (simple)
 	var steppize = function (force, args) {
