--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 	// Returns state of deep-press (aka Force Click)
 	var isDeepPress = function (force) {
-		return force > 0.645579000009;
+		return force > ( 1 / 3 );
 	}
 
 	// Check if there CSS3 3D-mode available?
