--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
 
             <h1>Forceify</h1>
-            <p>Simple, yet powerful touch-<b>force</b> level detector implementation in TS/JS</b></p>
+            <p>Simple, yet powerful touch-<b>force</b> level detector</b></p>
 			<div id="forceMe"></div>
 			<p id="forceValue">Force Level: <span id="forceValue__level">0</span>, Deep Press:&nbsp;<span id="forceValue__deep_press">No</span></p>
 
