--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     </div>
 
-    <script type="text/javascript" src="forceify.umd.js"></script>
+    <script type="text/javascript" src="https://unpkg.com/forceify"></script>
 	<script type="text/javascript">
 
 	// Helpers function
