fix macos force touch polyfilling

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       // Returns state of deep-press (aka Force Click)
       var isDeepPress = function(force) {
-        return force > 2 / 3;
+        return force > 0.5;
       };
 
       // Check if there CSS3 3D-mode available?
